--- a/carte.html
+++ b/carte.html
@@ -6,19 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
     <link rel="stylesheet" href="style/head-Carte.css">
-    <link rel="stylesheet" href="style/head-mobile-carte.css">
     <link rel="stylesheet" href="style/carte.css">
     <link rel="stylesheet" href="style/carteMobile.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/menu-scroll.css">
     <link rel="stylesheet" href="style/pannierMobile.css">
+    <link rel="stylesheet" href="style/head-mobile-carte.css">
 </head>
 <body>
     <script>
             
     </script>
-    <div class="menu-scroll" id="menu-scroll">
+    <div class="menu-scroll" id="menu-scroll" style="display: none;">
         <div class="lien-head "><a href="index.html" class="">Acceuil</a></div> <br>
         <div class="lien-head"><a href="apropos.html" class=""> A propos</a></div> <br>
         <div class="lien-head active"><a href="carte.html" class="">Carte</a></div> <br>
@@ -80,7 +81,7 @@
             vous avez choisi : <div id="categorie-choisi"></div>
         </div>
         <div class="pannier">
-            <div class="pannier2">
+            <div class="pannier3">
                 <br> Pannier <br> <br> <br> <br>
                 Salade : 15$ <br> <br> <br>
                 Plat : 30$ <br> <br> <br>
