--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="menu-scroll" id="menu-scroll" >
+    <div class="menu-scroll" id="menu-scroll" style="display:none;">
         <div class="lien-head active"><a href="index.html" class="">Acceuil</a></div> <br>
         <div class="lien-head"><a href="apropos.html" class=""> A propos</a></div> <br>
         <div class="lien-head"><a href="carte.html" class="">Carte</a></div> <br>
