--- a/carte.html
+++ b/carte.html
@@ -283,7 +283,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;
              <a href="">Terms and Conditions</a>
         </div>
-        <!-- FIN FOOTER -->
+        <!-- FIN FOOTERR -->
     </div>
     <script>
        function ajouter(name,prix){
