--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,19 @@
         <script>
           function ValidateEmail(inputText)
       {
+        var nom = document.forms["form1"]["nom"].value;
+      var tel = document.forms["form1"]["tel"].value;
+      var email = document.forms["form1"]["email"].value;
+      var message = document.forms["form1"]["message"].value;
+  if (nom == "" || tel =="" || message =="" || email=="") {
+    alert("Il faut remplire tous les champs");
+    return false;
+  }
+
       var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
       if(!inputText.value.match(mailformat))
       {
-        alert("You have entered an invalid email address!");
+        alert("Email n'est pas valide");
 
       }
       }
