--- a/carte.html
+++ b/carte.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -334,8 +333,8 @@ if (lesIds[id]==0) {
          x=x+prix;
          document.getElementById("total2").innerHTML=x;
           document.getElementById("totalDesk").innerHTML=x;
-          document.getElementById("id"+id).innerHTML=name+"(x"+lesIds[id]+") :"+prix+" <img src='img/icons/supprimer.png' onclick='supprimer("+id+","+prix+")' width=20px height=20px > <br> <br> ";
-          document.getElementById("id2"+id).innerHTML=name+"(x"+lesIds[id]+") :"+prix+" <img src='img/icons/supprimer.png' onclick='supprimer("+id+","+prix+")' width=20px height=20px > <br> <br> ";
+          document.getElementById("id"+id).innerHTML=name+"(x"+lesIds[id]+") :"+prix*lesIds[id]+" <img src='img/icons/supprimer.png' onclick='supprimer("+id+","+prix+")' width=20px height=20px > <br> <br> ";
+          document.getElementById("id2"+id).innerHTML=name+"(x"+lesIds[id]+") :"+prix*lesIds[id]+" <img src='img/icons/supprimer.png' onclick='supprimer("+id+","+prix+")' width=20px height=20px > <br> <br> ";
     //      document.getElementById("vosChoix2").innerHTML+=name+" :"+prix+"  <br> <br> ";
          
 } 
