--- a/apropos.html
+++ b/apropos.html
@@ -28,10 +28,10 @@
         </div>
     </div>
     <div class="menu-scroll" id="menu-scroll">
-        <div class="lien-head "><a href="index.html" class="">Acceuil</a></div> <br>
-        <div class="lien-head active"><a href="apropos.html" class=""> A propos</a></div> <br>
-        <div class="lien-head"><a href="carte.html" class="">Carte</a></div> <br>
-        <div class="lien-head"><a href="contact.html" class="">Contact</a></div>  
+        <div class="lien-head2 "><a href="index.html" class="">Acceuil</a></div> <br>
+        <div class="lien-head2 active"><a href="apropos.html" class=""> A propos</a></div> <br>
+        <div class="lien-head2"><a href="carte.html" class="">Carte</a></div> <br>
+        <div class="lien-head2"><a href="contact.html" class="">Contact</a></div>  
     </div>
     <div class="container" style="z-index:1;">
         <!--START HEAD-->
