--- a/carte.html
+++ b/carte.html
@@ -20,10 +20,10 @@
        
     </script>
     <div class="menu-scroll" id="menu-scroll" style="display: none;">
-        <div class="lien-head "><a href="index.html" class="">Acceuil</a></div> <br>
-        <div class="lien-head"><a href="apropos.html" class=""> A propos</a></div> <br>
-        <div class="lien-head active"><a href="carte.html" class="">Carte</a></div> <br>
-        <div class="lien-head"><a href="contact.html" class="">Contact</a></div>  
+        <div class="lien-head2 "><a href="index.html" class="">Acceuil</a></div> <br>
+        <div class="lien-head2"><a href="apropos.html" class=""> A propos</a></div> <br>
+        <div class="lien-head2 active"><a href="carte.html" class="">Carte</a></div> <br>
+        <div class="lien-head2"><a href="contact.html" class="">Contact</a></div>  
     </div>
 
 
