--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--START HEAD-->
         <div class="indexMobile head">
             <div class="menu-red-icon"><img src="img/icons/menu-red.png" onclick="myFunction()"  style="width: 20px; height:20px;" alt=""></div>
-            <div class="logo"> <a href=""><img src="img/logo.png" alt="" class="logo-img"></a>  </div>
+            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="" class="logo-img"></a>  </div>
             <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()" style="width: 20px; height:20px;" alt=""></div>   
             <div class="menu">
                 <div class="lien-head active"><a href="index.html" class="">Acceuil</a></div>
