--- a/apropos.html
+++ b/apropos.html
@@ -36,9 +36,9 @@
     <div class="container" style="z-index:1;">
         <!--START HEAD-->
         <div class="index indexMobile head">
-            <div class="menu-red-icon"><img src="img/icons/menu-red.png" onclick="myFunction()" style="width: 20px; height:20px;" alt=""></div>
-            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="" class="logo-img"></a>  </div>
-            <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()" style="width: 20px; height:20px;" alt=""></div> 
+            <div class="menu-red-icon"><img src="img/icons/menu-red.png" onclick="myFunction()" style="width: 20px; height:20px;" alt="japanese food sushi"></div>
+            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="japanese food sushi" class="logo-img"></a>  </div>
+            <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()" style="width: 20px; height:20px;" alt="japanese food sushi"></div> 
             <div class="menu">
                 <div class="lien-head "><a href="index.html" class="">Acceuil</a></div>
                 <div class="lien-head active"><a href="apropos.html" class=""> A propos</a></div>
@@ -51,8 +51,8 @@
         <div class="content">
             <div class="content-text1">Hitaka restaurant japonais depuis 2000</div>
             <div class="content-text2">Restaurant japonais qui vous sert tous les sushis <br> et les plats japonais </div>
-            <div class="img1" style="z-index:2;"> <img src="img/apropos/aPropos1.jpeg" alt="" style="width: 100%; height:100%;"> </div>
-            <div class="img2" style="z-index:1;"> <img src="img/apropos/aPropos2.jpeg" alt="" style="width: 100%; height:100%;"> </div>
+            <div class="img1" style="z-index:2;"> <img src="img/apropos/aPropos1.jpeg" alt="japanese food sushi" style="width: 100%; height:100%;"> </div>
+            <div class="img2" style="z-index:1;"> <img src="img/apropos/aPropos2.jpeg" alt="japanese food sushi" style="width: 100%; height:100%;"> </div>
             <div class="content-text3">
                 Street:  80 rue Victor Hugo <br>City:  Compiégne <br>State/province/area:   Picardie <br>Phone number  03.10.81.93.46
             </div>
