--- a/carte.html
+++ b/carte.html
@@ -63,8 +63,8 @@
         <!--START HEAD-->
         <div class="index indexMobile head">
             <div class="menu-red-icon"><img src="img/icons/menu-red.png" onclick="myFunction()" style="width: 20px; height:20px;" alt=""></div>
-            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="" class="logo-img"></a>  </div>
-            <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()"  style="width: 20px; height:20px;" alt=""></div> 
+            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="japanese food sushi" class="logo-img"></a>  </div>
+            <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()"  style="width: 20px; height:20px;" alt="japanese food sushi"></div> 
             <div class="menu">
                 <div class="lien-head "><a href="index.html" class="">Acceuil</a></div>
                 <div class="lien-head "><a href="apropos.html" class=""> A propos</a></div>
@@ -102,56 +102,56 @@
         <div class="repas" id="repas">
              <div id="Plat">
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat1.gif" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat1.gif" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Okonomiyaki <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >15$</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Okonomiyaki',15,0)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat2.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat2.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Miso Soup <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >25£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Miso Soup',25,1)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat3.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat3.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Yakitori <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >21£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Yakitori',21,2)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat4.jpeg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat4.jpeg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Udon <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >45£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Udon',45,3)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat5.webp" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat5.webp" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Takoyaki <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >5£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Takoyaki',5,4)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat6.webp" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat6.webp" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Soba <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >13£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Soba',13,5)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat7.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat7.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Sukiyaki <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >7£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Sukiyaki',7,6)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/plat/plat8.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/plat/plat8.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Sashimi <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >6£</span> <br>
@@ -160,56 +160,56 @@
             </div>
             <div id="Obento">
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento1.webp" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento1.webp" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Unagi <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >35£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Unagi',35,8)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento2.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento2.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Tofu <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >12£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Tofu',12,9)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento3.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento3.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Onigiri <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >33£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Onigiri',33,10)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento4.jfif" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento4.jfif" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Wagashi <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >29£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Wagashi',29,11)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento5.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento5.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Natto <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >12£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Natto',12,12)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento6.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento6.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Oden <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >34£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Oden',34,13)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento7.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento7.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Shabu Shabu <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >9£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Shabu Shabu',9,14)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/Obento/obento8.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/Obento/obento8.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Tempura <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >16£</span> <br>
@@ -218,56 +218,56 @@
             </div>
             <div id="lesSalades">
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade1.jpeg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade1.jpeg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Ramen <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >8£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Ramen',8,16)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade2.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade2.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Tonkatsu <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >15£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Tonkatsu',15,17)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade3.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade3.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Kaiseki <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >24£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Kaiseki',24,18)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade4.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade4.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Kappo Ryori  <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >13£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Kappo Ryori',13,19)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade5.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade5.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Shojin Ryori <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >19£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Shojin Ryori',19,20)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade6.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade6.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Osechi Ryori  <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >12£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Osechi Ryori',12,21)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade6.jpg" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade6.jpg" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Wagyu <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >27£</span> <br>
                     <span id="ajouter"><a href="#" onclick="ajouter('Wagyu',27,22)">Ajouter</a></span>
                 </div>
                 <div class="repas-plat" id="repas-plat">
-                    <img src="img/salade/salade9.webp" class="img-repat-plat" alt=""> <br>
+                    <img src="img/salade/salade9.webp" class="img-repat-plat" alt="japanese food sushi"> <br>
                     Bento <br>
                     ingredient 1, ingredient 2 ,ingredient 3 <br>
                     <span class="price-plat" >8£</span> <br>
