--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
     <div class="container">
         <!--START HEAD-->
         <div class="index indexMobile head">
-            <div class="menu-red-icon"><img src="img/icons/menu-red.png" onclick="myFunction()" style="width: 20px; height:20px;" alt=""></div>
-            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="" class="logo-img"></a>  </div>
-            <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()" style="width: 20px; height:20px;" alt=""></div> 
+            <div class="menu-red-icon"><img src="img/icons/menu-red.png" onclick="myFunction()" style="width: 20px; height:20px;" alt="japanese food sushi"></div>
+            <div class="logo"> <a href="index.html"><img src="img/logo.png" alt="japanese food sushi" class="logo-img"></a>  </div>
+            <div class="panier-icon-icon"><img src="img/icons/panier-icon.png" onclick="showPanier()" style="width: 20px; height:20px;" alt="japanese food sushi"></div> 
             <div class="menu">
                 <div class="lien-head "><a href="index.html" class="">Acceuil</a></div>
                 <div class="lien-head "><a href="apropos.html" class=""> A propos</a></div>
