--- a/carte.html
+++ b/carte.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="japanese,restaurant,near,me,restaurant,japonais,sushi" />
+    <meta name="description" content="Restaurant japonais qui vous sert tous les sushis et les plats japonais">
     <title>Document</title>
     
     <link rel="stylesheet" href="style/head-Carte.css">
