--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="japanese,restaurant,near,me,restaurant,japonais,sushi" />
+    <meta name="description" content="Restaurant japonais qui vous sert tous les sushis et les plats japonais">
     <link rel="stylesheet" href="style/head.css">
     <link rel="stylesheet" href="style/head-mobile.css">
     <link rel="stylesheet" href="style/index.css">
