--- a/carte.html
+++ b/carte.html
@@ -283,6 +283,9 @@
             <a href="">Privacy Policy</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
              <a href="">Terms and Conditions</a>
+             <br> <br> 
+             <img src="img/icons/whitefb.png" width="20px" height="20px" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;
+             <img src="img/icons/whiteinsta.png" width="20px" height="20px" alt="">
         </div>
         <!-- FIN FOOTERR -->
     </div>
