--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style/menu-scroll.css">
     <link rel="stylesheet" href="style/pannierMobile.css">
     <link rel="stylesheet" href="style/pannier2.css">
+    <link rel="stylesheet" href="style/footer.css">
     <title>Document</title>
 </head>
 <body>
@@ -88,6 +89,9 @@
             <a href="">Privacy Policy</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
              <a href="">Terms and Conditions</a>
+             <br> <br> 
+             <img src="img/icons/whitefb.png" width="20px" height="20px" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;
+             <img src="img/icons/whiteinsta.png" width="20px" height="20px" alt="">
         </div>
         <!-- FIN FOOTER -->
     </div>
