--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,9 @@
       }
       
       </script>
+      <div style="width:60%; margin-left: 20%; margin-top: 30px;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.428141320903!2d2.3456907149919894!3d48.830971610591895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e67194008044c1%3A0xce62821fe36fd186!2sIl%20%C3%A9tait%20un%20square!5e0!3m2!1sfr!2sma!4v1669363547292!5m2!1sfr!2sma" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
         <!-- FOOTER -->
         <div class="index footer">
             <a href="">Privacy Policy</a>
